Bug 396701 - Regression: New tab not put after current tab
Summary: Regression: New tab not put after current tab
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: tabbar (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 397277 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-07-20 16:00 UTC by Christoph Feck
Modified: 2018-10-07 05:27 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2018-07-20 16:00:22 UTC
Despite enabled setting "Put New Tab After Current Tab", new tabs are always added at the end.
Comment 1 Kurt Hindenburg 2018-07-31 03:10:03 UTC
The new tabwidget code needs adjusted to fix this.
Comment 2 Christoph Feck 2018-08-08 16:35:27 UTC
*** Bug 397277 has been marked as a duplicate of this bug. ***
Comment 3 Patrick Silva 2018-09-14 14:24:43 UTC
cannot confirm with konsole 18.08.1 on Arch Linux.
Comment 4 tcanabrava 2018-09-14 14:28:32 UTC
This is with master. There's a review open for that, I'm waiting for kurt to review.
Comment 5 Nate Graham 2018-09-14 22:04:56 UTC
What's the URL for the patch?
Comment 6 Christoph Feck 2018-10-04 22:00:44 UTC
Thomaz, is this part of https://www.angrycane.com.br/en/2018/09/09/continuous-work-on-konsole/ or is there a separate patch?
Comment 7 Nate Graham 2018-10-07 05:27:53 UTC
Fixed with https://phabricator.kde.org/D15828